# DRFProject

./: pyproject.toml
config/: settings.py  urls.py
course/: models.py  serializer.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
users/management/commands/: add_payment.py  add_user.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_amount.py
